syntax = "proto3";
package chk.payload;

option go_package = "checkers-backend/game";

message BasePayload {
  // GUI display text from server to client
  string notice = 2;

  oneof inner {
    WelcomePayload welcome = 5;
    MovePayload move_payload = 4;
    StartPayload start = 6;
    ExitPayload exit_payload = 7;
  }
}

enum TeamColor {
  TEAM_UNSPECIFIED = 0;
  TEAM_RED = 1;
  TEAM_BLACK = 2;
}

message WelcomePayload {
  // Color of this player pieces
  TeamColor my_team = 1;
}

message StartPayload {
  // Pieces for red player
  repeated int32 pieces_red = 1;
  // pieces for black player
  repeated int32 pieces_black = 2;
}

message MovePayload {
  // Represents destination cell
  message DestCell {
    int32 cell_index = 1;
    float x = 2;
    float y = 3;
  }
  // from which player
  TeamColor from_team = 1;
  // moving piece id
  int32 piece_id = 2;
  // destination cell
  DestCell dest_cell = 3;
}

// whenever any of the players exits, or game is over
message ExitPayload {
  // which player initiated exit (RED, BLACK, or unspecified)
  TeamColor from_term = 1;
}
